feat: 使用redux管理collapsed状态,并添加头像气泡卡片

--- a/src/components/commonHeader/index.css
+++ b/src/components/commonHeader/index.css
@@ -12,3 +12,11 @@
   overflow: hidden;
   cursor: pointer;
 }
+
+.item{
+  cursor: pointer;
+  padding: 2px;
+}
+.item:hover{
+  background: #f0f0f0;
+}
