--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -4,6 +4,16 @@
     gap: 20px;
 }
 
+.top_content{
+    display: flex;
+    gap: 30rem;
+}
+
+.user_info{
+    width: 500px;
+    padding: 10px;
+}
+
 .user{
     display: flex;
     gap: 30px;
@@ -23,7 +33,8 @@
     justify-content: space-between;
     align-items: center;
     p{
-        font-size: 20px;
+        font-size: 15px;
+        margin-bottom: 5px;
         color: #c1c1c1;
     }
 }
